// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-pagination Renders \`c-pagination\` on the bottom correctly 1`] = `
<div
  class="container text-xs-center"
>
  <div
    class="layout align-center justify-center"
  >
    <span
      class="grey--text text--darken-1"
    >
      showing 21 to 30 of 100 entries
    </span>
    <ul
      class="v-pagination theme--light"
      data-test="vPagination"
    >
      <li>
        <button
          class="v-pagination__navigation"
          type="button"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            chevron_left
          </i>
        </button>
      </li>
      <li>
        <button
          class="v-pagination__item"
          type="button"
        >
          1
        </button>
      </li>
      <li>
        <button
          class="v-pagination__item"
          type="button"
        >
          2
        </button>
      </li>
      <li>
        <button
          class="v-pagination__item v-pagination__item--active primary"
          type="button"
        >
          3
        </button>
      </li>
      <li>
        <button
          class="v-pagination__item"
          type="button"
        >
          4
        </button>
      </li>
      <li>
        <button
          class="v-pagination__item"
          type="button"
        >
          5
        </button>
      </li>
      <li>
        <span
          class="v-pagination__more"
        >
          ...
        </span>
      </li>
      <li>
        <button
          class="v-pagination__item"
          type="button"
        >
          10
        </button>
      </li>
      <li>
        <button
          class="v-pagination__navigation"
          type="button"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            chevron_right
          </i>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`c-pagination Renders \`c-pagination\` on the top correctly 1`] = `
<div
  class="container text-xs-center py-1"
>
  <ul
    class="v-pagination"
  >
    <li>
      <button
        class="v-pagination__navigation"
        data-test="paginationPreviewButton"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
        >
          chevron_left
        </i>
      </button>
    </li>
    <div
      class="pagination-details"
    >
      3 / 10
    </div>
    <li>
      <button
        class="v-pagination__navigation"
        data-test="paginationNextButton"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
        >
          chevron_right
        </i>
      </button>
    </li>
  </ul>
</div>
`;

exports[`c-pagination Renders \`c-pagination\` on the top with disabled buttons correctly 1`] = `
<div
  class="container text-xs-center py-1"
>
  <ul
    class="v-pagination"
  >
    <li>
      <button
        class="v-pagination__navigation v-pagination__navigation--disabled"
        data-test="paginationPreviewButton"
        disabled="disabled"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
        >
          chevron_left
        </i>
      </button>
    </li>
    <div
      class="pagination-details"
    >
      1 / 1
    </div>
    <li>
      <button
        class="v-pagination__navigation v-pagination__navigation--disabled"
        data-test="paginationNextButton"
        disabled="disabled"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
        >
          chevron_right
        </i>
      </button>
    </li>
  </ul>
</div>
`;

exports[`c-pagination Renders \`c-pagination\` on the top with disabled next button correctly 1`] = `
<div
  class="container text-xs-center py-1"
>
  <ul
    class="v-pagination"
  >
    <li>
      <button
        class="v-pagination__navigation"
        data-test="paginationPreviewButton"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
        >
          chevron_left
        </i>
      </button>
    </li>
    <div
      class="pagination-details"
    >
      2 / 2
    </div>
    <li>
      <button
        class="v-pagination__navigation v-pagination__navigation--disabled"
        data-test="paginationNextButton"
        disabled="disabled"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
        >
          chevron_right
        </i>
      </button>
    </li>
  </ul>
</div>
`;

exports[`c-pagination Renders \`c-pagination\` on the top with disabled prev button correctly 1`] = `
<div
  class="container text-xs-center py-1"
>
  <ul
    class="v-pagination"
  >
    <li>
      <button
        class="v-pagination__navigation v-pagination__navigation--disabled"
        data-test="paginationPreviewButton"
        disabled="disabled"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
        >
          chevron_left
        </i>
      </button>
    </li>
    <div
      class="pagination-details"
    >
      1 / 2
    </div>
    <li>
      <button
        class="v-pagination__navigation"
        data-test="paginationNextButton"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
        >
          chevron_right
        </i>
      </button>
    </li>
  </ul>
</div>
`;

exports[`c-pagination Renders \`c-pagination\` with default props correctly 1`] = `
<div
  class="container text-xs-center"
>
  <div
    class="layout align-center justify-center"
  >
    <span
      class="grey--text text--darken-1"
    >
      showing 1 to 1 of 1 entries
    </span>
    <ul
      class="v-pagination theme--light"
      data-test="vPagination"
    >
      <li>
        <button
          class="v-pagination__navigation v-pagination__navigation--disabled"
          type="button"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            chevron_left
          </i>
        </button>
      </li>
      <li>
        <button
          class="v-pagination__item v-pagination__item--active primary"
          type="button"
        >
          1
        </button>
      </li>
      <li>
        <button
          class="v-pagination__navigation v-pagination__navigation--disabled"
          type="button"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            chevron_right
          </i>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`c-pagination Renders \`c-pagination\` with default props correctly 2`] = `
<div
  class="container text-xs-center"
>
  <div
    class="layout align-center justify-center"
  >
    <span
      class="grey--text text--darken-1"
    >
      showing 1 to 1 of 1 entries
    </span>
    <ul
      class="v-pagination theme--light"
      data-test="vPagination"
    >
      <li>
        <button
          class="v-pagination__navigation v-pagination__navigation--disabled"
          type="button"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            chevron_left
          </i>
        </button>
      </li>
      <li>
        <button
          class="v-pagination__item v-pagination__item--active primary"
          type="button"
        >
          1
        </button>
      </li>
      <li>
        <button
          class="v-pagination__navigation v-pagination__navigation--disabled"
          type="button"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            chevron_right
          </i>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`c-pagination Renders \`c-pagination\` with default props on the top correctly 1`] = `
<div
  class="container text-xs-center py-1"
>
  <ul
    class="v-pagination"
  >
    <li>
      <button
        class="v-pagination__navigation v-pagination__navigation--disabled"
        data-test="paginationPreviewButton"
        disabled="disabled"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
        >
          chevron_left
        </i>
      </button>
    </li>
    <div
      class="pagination-details"
    >
      1 / 1
    </div>
    <li>
      <button
        class="v-pagination__navigation v-pagination__navigation--disabled"
        data-test="paginationNextButton"
        disabled="disabled"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
        >
          chevron_right
        </i>
      </button>
    </li>
  </ul>
</div>
`;
